# micro

./: .gitignore  LICENSE  Makefile  README.md
kernel/: :w  CMakeLists.txt  Makefile  build.sh  kernel.ld
kernel/arch/amd64/: amd64.mk
kernel/arch/x86_64/: CMakeLists.txt  x86_64.mk
kernel/dev/: Makefile  dev.mk  linker.ld  module.mk
kernel/dev/ahci/: Makefile  ahci.c  ahci.ko  ahci_defs.h
kernel/dev/atapi/: Makefile  atapi.c  atapi.ko
kernel/dev/ext2/: Makefile  ext2.c  ext2.h  ext2.ko
kernel/dev/fat/: Makefile  fat.c  fat.h  fat.ko
kernel/dev/ps2/: Makefile  ps2.c  ps2.h  ps2.ko
kernel/dev/ps2kb/: Makefile  ps2kb.c  ps2kb.ko
kernel/dev/ps2mouse/: Makefile  ps2mouse.c  ps2mouse.ko
kernel/dev/test/: Makefile  test.c  test.ko
kernel/generic/: CMakeLists.txt
kernel/generic/include/: acpi.h  init.h  list.h  lock.h  sched.h  stdlib.h  sys.h  task.h  thread.h  types.h  vfs.h
kernel/generic/src/: acpi.c  heap.c  init.c  list.c  sched.c  stdlib.c  sys.c  task.c  thread.c  tree.c
kernel/include/kern/: acpi.h  acpi_defs.h  binfmt.h  elf.h  heap.h  init.h  list.h  lock.h  sched.h  signal.h  task.h  thread.h  tree.h  vfs.h
kernel/include/micro/: acpi.h  binfmt.h  (+38 more)
kernel/kern/: CMakeLists.txt  acpi.c  binfmt.c  dev.c  exec.c  exit.c  fb.c  fbdev.c  fork.c  gpt.c  heap.c  init.c  kern.mk  ksym.c  list.c  mbr.c  module.c  part.c  pci.c  ps2.c  ptrace.c  reboot.c  ringbuf.c  sched.c  sem.c  signal.c  stat.c  stdlib.c  sys.c  task.c  thread.c  time.c  tree.c  tty.c  vga.c
kernel/src/: acpi.c  acpi.h  init.c  stdlib.h  types.h
kernel/tools/: mkinitrd.c
(+661 files in other folders)
